examples/type_system/failing/200_effect_row_absent_ordering_linked_violation_e421.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E421: deferred Absent catches shared-row binding from a later argument.

fn needs_linked_absence(
    first: (() -> Int with |e - Console),
    second: (() -> Int with |e)
) -> Int with |e - Console {
    first() + second()
}

fn row_var_worker() -> Int with |e {
    1
}

fn console_worker() -> Int with Console {
    print("console")
    2
}

fn main() -> Unit with Console {
    let _ = needs_linked_absence(row_var_worker, console_worker)
}
